[tool.poetry]
name = "rl-and-advanced-dl-hw2"
version = "0.1.0"
description = ""
authors = ["Aleksandr Ivanov <alex.iv.vad@gmail.com>"]
readme = "README.md"
packages = [{include = "rl_and_advanced_dl_hw2"}]

[tool.poetry.dependencies]
python = ">=3.9,<3.11"
gym = "^0.26.2"
matplotlib = "^3.6.2"
numpy = "^1.23.5"
tqdm = "^4.64.1"
seaborn = "^0.12.1"
jupyter = "^1.0.0"
sklearn = "^0.0.post1"
scikit-learn = "^1.1.3"
joblib = "^1.2.0"
statsmodels = "^0.13.5"
scipy = "1.8.1"
latex = "^0.7.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
